  NOTE: size would need to be updated in Hatari config files too!
- GEMDOS emulation:
  - SDL GUI & cmdline option to skip drives used by partitions on
    ACSI & IDE images when assigning drive for GEMDOS HD emulation.
    Partition count parsed by Hatari might not match count used by
    Atari HD driver due to driver differences in interpreting disk MBR
- SDL GUI:
  - joystick navigation to options GUI
  - keyboard navigation & shortcuts for options GUI
  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names
  - AltGr+F<1-4> keyboard shortcuts to switch mode/type for emulated
    joysticks and joypads
- Debugger:
  - Fix: crash when GEMDOS tracing is used without GEMDOS HD emulation
  - Fix: update external disassembler's CPU mask when CPU type is changed
         (it wasn't restricted to only the valid opcodes for a CPU type)
  - Add trace support for IDE, MIDI and keymaps.  ACSI (SCSI) and IDE
    trace output shows primary partition tables for ACSI & IDE images
    (both Atari and DOS MBRs are supported)
  - Add "reset <hard|soft>" command
  - Add "save" subcommand to "history" command

Other changes:
- Remaining Hatari OSX UI changes for Hatari v1.8.0
  (localization)

Fixed games:
- Superior 65 - Blood Money (cpu, exception stack and bus error)
  (note that this version is bugged and will crash with TOS 1.04 or 1.62)


 Version 1.8.0 (2014-07-30):
 ---------------------------

Emulation:
- ST video changes :
  - Handle 0 byte line by switching freq in STE mode
  - Use high res when ff8260 is set to 3
  - Randomly return 0 or 1 when reading unused bits 3,7 and 11 of
    color registers (except when running from ROM)
  - Better detection of bottom border removal on a 60 Hz screen
  - support for color change during only 4 cycles
  - better bitmap/color alignment for STE med res overscan at 60 Hz
  - Set default value of nSpec512Threshold to "1" instead of "16"